--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,10 +1,17 @@
 body, html{
   margin: 0;
-  width: 100%;
+  /* width: 100%; */
   font-family: 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.6;
+  font-size: 10px;
+  background:#ebebeb;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 code {
