--- a/my-app/src/products/ProductPage.css
+++ b/my-app/src/products/ProductPage.css
@@ -50,32 +50,19 @@
 /*# sourceMappingURL=ProductPage.css.map */
 .product {
   font-family: 'Helvetica Neue';
-  /* position:absolute;
-  height:100%;
-  width:100%; */
 }
-/* .panels {
-  position:relative;
-  height:100%;
-  min-height:100%;
-  width:100%;
-  z-index:1000;
-} */
 .product__header {
-  /* position:fixed;
-
-    top:0;
-    z-index:-99; */
   position: relative;
   min-height: 100vh;
   background: #f9f9f9;
 }
 .product__header-background {
-  position: absolute;
+  position: fixed;
   object-fit: cover;
   width: 100vw;
   height: 100%;
   z-index: 99;
+  background-color: #f9f9f9;
 }
 .wrapper {
   position: relative;
@@ -114,6 +101,8 @@
   width: 37rem;
 }
 .product-content {
+  position: relative;
+  z-index: 100;
   background: #ebebeb;
   /* margin-top: 100vh; */
 }
@@ -122,13 +111,13 @@
   border-bottom: 2.4px solid black;
 }
 .page-section__title {
-  font-size: 6.2rem;
+  font-size: 5.8rem;
   line-height: 7.5rem;
   margin-top: 0;
   margin-bottom: 1.8rem;
 }
 .page-section__text {
-  font-size: 2.45rem;
+  font-size: 2.36rem;
   margin: 0;
   line-height: 3.2rem;
 }
@@ -160,6 +149,23 @@
   padding-top: 3.5rem;
   padding-bottom: 12rem;
 }
+.mgp-group-purchase__prices {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-row-gap: 1rem;
+  grid-column-gap: 5rem;
+  font-size: 2.6rem;
+}
+.u-font-light {
+  font-weight: 200;
+}
+.u-font-medium {
+  font-weight: 400;
+}
+.u-font-bold {
+  font-weight: bolder;
+}
 .u-bottom-border {
   border-bottom: 2.4px solid black;
 }
@@ -189,36 +195,6 @@
     opacity: 1
   }
 }
-.fadeInDown {
-  opacity: 0;
-  animation-name: fadeInDown;
-  animation-fill-mode: both;
-}
-@keyframes fadeInDown {
-  from {
-    transform: translate3d(0,-40px,0);
-    opacity: 0;
-  }
-  to {
-    transform: translate3d(0,0,0);
-    opacity: 1
-  }
-}
-.fadeInUp {
-  opacity: 0;
-  animation-name: fadeInUp;
-  animation-fill-mode: both;
-}
-@keyframes fadeInUp {
-  from {
-    transform: translate3d(0,40px,0);
-    opacity: 0;
-  }
-  to {
-    transform: translate3d(0,0,0);
-    opacity: 1
-  }
-}
 .fadeInLeft {
   animation-name: fadeInLeft;
   animation-fill-mode: both;
@@ -234,15 +210,14 @@
     opacity: 1
   }
 }
-
 /* 
   ##Device = Laptops, Desktops
   ##Screen = B/w from 1025px 
 */
 @media (min-width: 1025px) {
   .u-container {
-    margin-left: 20rem;
-    margin-right: 20rem;
+    margin-left: 19rem;
+    margin-right: 19rem;
   }
 }
 /* 
