--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -28,8 +28,18 @@ img {
   display: block;
 }
 
-@media (min-width: 1500px) {
+@media (min-width: 700px) {
   body, html{
     font-size: 0.7vw;
+  }
+  .u-container {
+    margin-left: 19rem;
+    margin-right: 19rem;
+  }
+}
+
+@media (max-width: 700px) {
+  body, html{
+    font-size: 8.5px;
   }
 }
