--- a/my-app/src/products/ProductPage.css
+++ b/my-app/src/products/ProductPage.css
@@ -157,7 +157,7 @@
 }
 .mask-image__info > * {
   margin: 0;
-  padding-left: 25rem;
+  padding-left: 52%;
   font-size: 0.85rem;
 }
 .mgp-group-purchase__price-info {
@@ -198,15 +198,25 @@
 .u-bottom-border {
   border-bottom: 2.4px solid black;
 }
+.u-padding-bottom {
+  padding-bottom: 13rem;
+}
+.u-no-padding-bottom {
+  padding-bottom: 0;
+}
 .u-no-bottom-border {
   border-bottom: none;
+}
+.u-border-grey {
+  border-color: #f5f5f5;
 }
 .u-underline {
   padding-bottom: 2px;
   border-bottom: 1px solid black;
 }
 .u-padding-horizontal-default {
-  padding: 0 3rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 .u-container {
   overflow-x: visible;
@@ -221,8 +231,8 @@
 .u-black-font {
   color: black;
 }
-.u-white-font {
-  color: white;
+.u-grey-font {
+  color: #f5f5f5;
 }
 
 /* Animations */
