--- a/my-app/src/products/ProductPage.css
+++ b/my-app/src/products/ProductPage.css
@@ -214,6 +214,9 @@
   padding-bottom: 2px;
   border-bottom: 1px solid black;
 }
+.u-underline-white {
+  border-bottom: 1px solid #f5f5f5;
+}
 .u-padding-horizontal-default {
   padding-left: 3rem;
   padding-right: 3rem;
