add footer component

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -28,6 +28,18 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 @media (min-width: 700px) {
   body, html{
     font-size: 0.7vw;
