--- a/my-app/src/products/ProductPage.css
+++ b/my-app/src/products/ProductPage.css
@@ -61,7 +61,7 @@
   object-fit: cover;
   width: 100vw;
   height: 100%;
-  z-index: 99;
+  z-index: 1;
   background-color: #f9f9f9;
 }
 .wrapper {
@@ -204,6 +204,9 @@
 .u-no-padding-bottom {
   padding-bottom: 0;
 }
+.u-no-margin {
+  margin: 0!important;
+}
 .u-no-bottom-border {
   border-bottom: none;
 }
@@ -216,6 +219,9 @@
 }
 .u-underline-white {
   border-bottom: 1px solid #f5f5f5;
+}
+.u-underline-grey {
+  border-bottom: 1px solid #7c7c7c;
 }
 .u-padding-horizontal-default {
   padding-left: 3rem;
@@ -234,8 +240,11 @@
 .u-black-font {
   color: black;
 }
-.u-grey-font {
+.u-font-light-grey {
   color: #f5f5f5;
+}
+.u-font-grey {
+  color: #7c7c7c;
 }
 
 /* Animations */
